--- a/settings.gradle
+++ b/settings.gradle
@@ -15,21 +15,22 @@ dependencyResolutionManagement {
             version("commons-io", "2.11.0")
             version("jakarta-servletapi", "4.0.4")
             version("jakarta-annotationsapi", "1.3.5")
-            version("lombok", "1.18.22")
-            version("testng", "7.4.0")
-            version("mockito", "4.0.0")
-            version("mockito-testng", "0.4.13")
+            version("lombok", "1.18.24")
+            version("testng", "7.6.0")
+            version("mockito", "4.6.1")
+            version("mockito-testng", "0.4.23")
             version("logback", "1.2.11")
-            version("assertj", "3.21.0")
+            version("assertj", "3.23.1")
             version("hamcrest", "2.2")
-            version("json-path", "2.6.0")
+            version("json-path", "2.7.0")
             version("jackson", "2.13.3")
             version("owasp-dependencycheck", "7.1.0.1")
-            version("coditory-integrationtest", "1.3.0")
+            version("coditory-integrationtest", "1.4.0")
             version("nebula-optionalbase", "7.0.0")
             version("siouan-frontend", "6.0.0")
             version("checkstyle", "10.1")
             version("pmd", "6.45.0")
+            version("versions-plugin", "0.42.0")
 
             library("spring-boot-autoconfigure", "org.springframework.boot", "spring-boot-autoconfigure").versionRef("spring-boot")
             library("spring-boot-test", "org.springframework.boot", "spring-boot-test").versionRef("spring-boot")
@@ -60,6 +61,7 @@ dependencyResolutionManagement {
             plugin("nebula-optionalbase", "nebula.optional-base").versionRef("nebula-optionalbase")
             plugin("spring-boot-plugin", "org.springframework.boot").versionRef("spring-boot")
             plugin("siouan-frontend", "org.siouan.frontend-jdk11").versionRef("siouan-frontend")
+            plugin("versions", "com.github.ben-manes.versions").versionRef("versions-plugin")
 
             bundle("spring-boot-starters", [
                 "spring-boot-starter-base",
