--- a/mailspy-frontend/package.json
+++ b/mailspy-frontend/package.json
@@ -9,14 +9,15 @@
         "test": "craco test",
         "prettier-check": "prettier --check .",
         "prettier-apply": "prettier --write .",
-        "eslint": "eslint-output \"**/*.ts\" \"**/*.tsx\""
+        "eslint": "eslint-output \"**/*.ts\" \"**/*.tsx\"",
+        "versions-check": "npm-check-updates"
     },
     "author": "xylan.org",
     "license": "MIT",
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "1.2.32",
         "@fortawesome/free-solid-svg-icons": "5.15.1",
-        "@fortawesome/react-fontawesome": "0.1.13",
+        "@fortawesome/react-fontawesome": "0.1.18",
         "autobind-decorator": "2.4.0",
         "bootstrap": "4.5.3",
         "escape-html": "1.0.3",
@@ -32,28 +33,28 @@
         "reflect-metadata": "0.1.13"
     },
     "devDependencies": {
-        "@craco/craco": "6.1.1",
+        "@craco/craco": "6.4.3",
         "@sinonjs/fake-timers": "7.0.5",
-        "@types/enzyme": "3.10.8",
-        "@types/escape-html": "1.0.0",
-        "@types/file-saver": "2.0.1",
+        "@types/enzyme": "3.10.12",
+        "@types/escape-html": "1.0.2",
+        "@types/file-saver": "2.0.5",
         "@types/jest": "26.0.20",
         "@types/jest-when": "2.7.3",
-        "@types/mailparser": "3.0.1",
+        "@types/mailparser": "3.4.0",
         "@types/node": "14.14.27",
         "@types/react": "17.0.2",
         "@types/react-dom": "17.0.1",
-        "@types/uuid": "8.3.0",
         "@typescript-eslint/eslint-plugin": "4.15.0",
         "@typescript-eslint/parser": "4.15.0",
-        "@wojtekmaj/enzyme-adapter-react-17": "0.6.0",
-        "babel-plugin-transform-typescript-metadata": "0.3.1",
+        "@wojtekmaj/enzyme-adapter-react-17": "0.6.7",
+        "babel-plugin-transform-typescript-metadata": "0.3.2",
         "enzyme": "3.11.0",
         "eslint-config-prettier": "8.5.0",
         "eslint-output": "3.0.1",
         "jest": "26.6.0",
         "jest-mock-extended": "1.0.13",
-        "jest-when": "3.3.1",
+        "jest-when": "3.5.1",
+        "npm-check-updates": "13.1.1",
         "prettier": "2.6.2",
         "react-scripts": "4.0.1",
         "ts-jest": "26.5.4",
