target only minor version updates

--- a/mailspy-frontend/package.json
+++ b/mailspy-frontend/package.json
@@ -10,7 +10,7 @@
         "prettier-check": "prettier --check .",
         "prettier-apply": "prettier --write .",
         "eslint": "eslint-output \"**/*.ts\" \"**/*.tsx\"",
-        "versions-check": "npm-check-updates"
+        "versions-check": "npm-check-updates --target minor"
     },
     "author": "xylan.org",
     "license": "MIT",
