--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,7 @@ dependencyCheck {
 
 dependencyUpdates {
     gradleReleaseChannel = "current"
+    revision = "release"
 }
 
 def isNonStable = { version ->
@@ -64,12 +65,22 @@ def isNonStable = { version ->
     return !stableKeyword && !(version ==~ regex)
 }
 
+def getMajorVersion = { version ->
+    def match = version =~ /^(\d+)\..*$/
+    return match && match[0] ? match[0][1] as int : null
+}
+
+def majorVersionUpdate = { candidateVersion, currentVersion ->
+    return getMajorVersion(candidateVersion) > getMajorVersion(currentVersion)
+}
+
 tasks.named("dependencyUpdates").configure {
     checkForGradleUpdate = true
     outputFormatter = "html"
     outputDir = "$buildDir/reports"
     reportfileName = "dependency-update-report"
     rejectVersionIf {
-        isNonStable(it.candidate.version) && !isNonStable(it.currentVersion)
+        majorVersionUpdate(it.candidate.version, it.currentVersion)
+            || isNonStable(it.candidate.version) && !isNonStable(it.currentVersion)
     }
 }
