--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,9 @@
 plugins {
     alias libs.plugins.owasp.dependencycheck
     alias libs.plugins.versions
+    alias libs.plugins.jk1.dependencylicensereport
 }
+
 
 description = "MailSpy :: Root"
 
@@ -83,4 +85,45 @@ tasks.named("dependencyUpdates").configure {
         majorVersionUpdate(it.candidate.version, it.currentVersion)
             || isNonStable(it.candidate.version) && !isNonStable(it.currentVersion)
     }
+}
+
+import com.github.jk1.license.importer.DependencyDataImporter
+import com.github.jk1.license.ImportedModuleBundle
+import com.github.jk1.license.ImportedModuleData
+import groovy.json.JsonSlurper
+
+licenseReport {
+    importers = [
+        new DependencyDataImporter() {
+            @Override
+            public String getImporterName() {
+                return "NPM dependency licenses report";
+            }
+
+            @Override
+            public Collection<ImportedModuleBundle> doImport() {
+                def report = new JsonSlurper().parse(file("${project(":mailspy-frontend").buildDir}/reports/licenses/licenses.json"));
+                def modules = report.collect { key, value ->
+                    def versionSeparatorIndex = key.lastIndexOf('@');
+                    return new ImportedModuleData(
+                        name: key.substring(0, versionSeparatorIndex),
+                        version: key.substring(versionSeparatorIndex + 1),
+                        projectUrl: value.url ?: value.repository,
+                        license: value.licenses
+                    );
+                }
+                return [new ImportedModuleBundle("NPM dependencies", modules)];
+            }
+        }
+    ]
+    allowedLicensesFile = file("$projectDir/config/allowed-licenses.json")
+    excludeBoms = true
+}
+
+generateLicenseReport {
+    dependsOn ":mailspy-frontend:frontendLicenses"
+}
+
+task check {
+    dependsOn checkLicense
 }
