--- a/mailspy-frontend/package.json
+++ b/mailspy-frontend/package.json
@@ -10,7 +10,8 @@
         "prettier-check": "prettier --check .",
         "prettier-apply": "prettier --write .",
         "eslint": "eslint-output \"**/*.ts\" \"**/*.tsx\"",
-        "versions-check": "npm-check-updates --target minor"
+        "versions-check": "npm-check-updates --target minor",
+        "licenses": "license-checker --production --direct --json --out build/reports/licenses/licenses.json"
     },
     "author": "xylan.org",
     "license": "MIT",
@@ -54,6 +55,7 @@
         "jest": "26.6.3",
         "jest-mock-extended": "1.0.18",
         "jest-when": "3.5.1",
+        "license-checker": "25.0.1",
         "npm-check-updates": "13.1.1",
         "prettier": "2.6.2",
         "react-scripts": "4.0.3",
