--- a/settings.gradle
+++ b/settings.gradle
@@ -32,6 +32,7 @@ dependencyResolutionManagement {
             version("pmd", "6.45.0")
             version("versions-plugin", "0.42.0")
             version("jacoco", "0.8.8")
+            version("dependency-license-report", "2.1")
 
             library("spring-boot-autoconfigure", "org.springframework.boot", "spring-boot-autoconfigure").versionRef("spring-boot")
             library("spring-boot-test", "org.springframework.boot", "spring-boot-test").versionRef("spring-boot")
@@ -63,6 +64,7 @@ dependencyResolutionManagement {
             plugin("spring-boot-plugin", "org.springframework.boot").versionRef("spring-boot")
             plugin("siouan-frontend", "org.siouan.frontend-jdk11").versionRef("siouan-frontend")
             plugin("versions", "com.github.ben-manes.versions").versionRef("versions-plugin")
+            plugin("jk1-dependencylicensereport", "com.github.jk1.dependency-license-report").versionRef("dependency-license-report")
 
             bundle("spring-boot-starters", [
                 "spring-boot-starter-base",
