add license header to sources and spotless check

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,25 @@
+/*
+ * Copyright (c) 2022 xylan.org
+ * 
+ * Permission is hereby granted, free of charge, to any person obtaining a copy
+ * of this software and associated documentation files (the "Software"), to deal
+ * in the Software without restriction, including without limitation the rights
+ * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+ * copies of the Software, and to permit persons to whom the Software is
+ * furnished to do so, subject to the following conditions:
+ * 
+ * The above copyright notice and this permission notice shall be included in all
+ * copies or substantial portions of the Software.
+ * 
+ * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+ * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+ * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+ * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+ * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+ * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+ * SOFTWARE.
+ */
+
 rootProject.name = "mailspy"
 
 include "mailspy-app"
@@ -33,6 +55,7 @@ dependencyResolutionManagement {
             version("versions-plugin", "0.42.0")
             version("jacoco", "0.8.8")
             version("dependency-license-report", "2.1")
+            version("spotless", "6.7.2")
 
             library("spring-boot-autoconfigure", "org.springframework.boot", "spring-boot-autoconfigure").versionRef("spring-boot")
             library("spring-boot-test", "org.springframework.boot", "spring-boot-test").versionRef("spring-boot")
@@ -65,6 +88,7 @@ dependencyResolutionManagement {
             plugin("siouan-frontend", "org.siouan.frontend-jdk11").versionRef("siouan-frontend")
             plugin("versions", "com.github.ben-manes.versions").versionRef("versions-plugin")
             plugin("jk1-dependencylicensereport", "com.github.jk1.dependency-license-report").versionRef("dependency-license-report")
+            plugin("spotless", "com.diffplug.spotless").versionRef("spotless")
 
             bundle("spring-boot-starters", [
                 "spring-boot-starter-base",
