--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,31 @@
+/*
+ * Copyright (c) 2022 xylan.org
+ * 
+ * Permission is hereby granted, free of charge, to any person obtaining a copy
+ * of this software and associated documentation files (the "Software"), to deal
+ * in the Software without restriction, including without limitation the rights
+ * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+ * copies of the Software, and to permit persons to whom the Software is
+ * furnished to do so, subject to the following conditions:
+ * 
+ * The above copyright notice and this permission notice shall be included in all
+ * copies or substantial portions of the Software.
+ * 
+ * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+ * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+ * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+ * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+ * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+ * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+ * SOFTWARE.
+ */
+
 plugins {
     alias libs.plugins.owasp.dependencycheck
     alias libs.plugins.versions
     alias libs.plugins.jk1.dependencylicensereport
+    alias libs.plugins.spotless
 }
-
 
 description = "MailSpy :: Root"
 
@@ -36,8 +58,32 @@ subprojects {
             consoleOutput = true
         }
     }
+
     tasks.withType(JavaCompile) {
         options.release = 11
+    }
+}
+
+spotless {
+    def exclusions = [
+        "**/build/**",
+        ".gradle/**",
+        ".idea/**",
+        ".settings/**",
+        ".vscode/**",
+        "**/node_modules/**",
+        "mailspy-frontend/package-lock.json"
+    ]
+    format "licenseHeader", {
+        target "**/*.gradle", "**/*.java", "**/*.ts", "**/*.tsx", "**/*.js", "**/*.css"
+        targetExclude exclusions
+        licenseHeaderFile file("$rootDir/config/license/c_like.txt"), "^(?!(\\/\\*| \\*| \\*\\/)).+"
+    }
+    format "generic", {
+        target "**/*.gradle", "**/*.java", "**/*.ts", "**/*.tsx", "**/*.js", "**/*.css", "**/*.json", "**/*.properties"
+        targetExclude exclusions
+        trimTrailingWhitespace()
+        endWithNewline()
     }
 }
 
@@ -124,6 +170,6 @@ generateLicenseReport {
     dependsOn ":mailspy-frontend:frontendLicenses"
 }
 
-task check {
+check {
     dependsOn checkLicense
 }
