--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,7 @@ subprojects {
 
     tasks.withType(JavaCompile) {
         options.release = 11
+        options.compilerArgs << "-Xlint:-processing" << "-Werror"
     }
 }
 
