create development profile for app module

--- a/mailspy-app/build.gradle
+++ b/mailspy-app/build.gradle
@@ -38,3 +38,7 @@ dependencies {
 springBoot {
     mainClass = "org.xylan.mailspy.app.MailSpyApplication"
 }
+
+bootRun {
+    args = ["--spring.profiles.active=development"]
+}
