add coverage to step summary

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -20,8 +20,15 @@ jobs:
           java-version: "11"
           distribution: "adopt"
       - name: Validate Gradle wrapper
-        uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
-      - name: Build with Gradle
-        uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
+        uses: gradle/wrapper-validation-action@v1.0.4
+      - name: Invoke Gradle check
+        uses: gradle/gradle-build-action@v2.3.0
         with:
           arguments: check
+      - name: Report JaCoCo coverage
+        uses: PavanMudigonda/jacoco-reporter@v4.5
+        with:
+          coverage_results_path: mailspy-core/build/reports/jacoco/test/jacocoTestReport.xml
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Add coverage report to summary
+        run: echo "${{ steps.jacoco_reporter.outputs.coverageSummary }}" >> $GITHUB_STEP_SUMMARY
