--- a/mailspy-core/build.gradle
+++ b/mailspy-core/build.gradle
@@ -97,6 +97,9 @@ def setJacocoExclusions = { classDirectories ->
 
 jacocoTestReport {
     dependsOn test
+    reports {
+        xml.required = true
+    }
     afterEvaluate {
         setJacocoExclusions(classDirectories)
     }
