--- a/settings.gradle
+++ b/settings.gradle
@@ -56,6 +56,7 @@ dependencyResolutionManagement {
             version("versions-plugin", "0.42.0")
             version("jacoco", "0.8.8")
             version("spotless", "6.8.0")
+            version("spotless-changelog", "2.4.0")
             version("palantirformat", "2.25.0")
 
             library("spring-boot-autoconfigure", "org.springframework.boot", "spring-boot-autoconfigure").versionRef("spring-boot")
@@ -89,6 +90,7 @@ dependencyResolutionManagement {
             plugin("siouan-frontend", "org.siouan.frontend-jdk11").versionRef("siouan-frontend")
             plugin("versions", "com.github.ben-manes.versions").versionRef("versions-plugin")
             plugin("spotless", "com.diffplug.spotless").versionRef("spotless")
+            plugin("spotless-changelog", "com.diffplug.spotless-changelog").versionRef("spotless-changelog")
 
             bundle("spring-boot-starters", [
                 "spring-boot-starter-base",
