--- a/mailspy-frontend/build.gradle
+++ b/mailspy-frontend/build.gradle
@@ -87,10 +87,20 @@ task frontendDependencyUpdates(type: RunNpm) {
     dependsOn installFrontend
 }
 
+task updatePackageJsonVersion(type: RunNpm) {
+    description = "Updates the version in the package.json file. New version is inferred from the changelog."
+    group = "verification"
+    script = "version ${rootProject.spotlessChangelog.versionNext}"
+}
+
 check {
     dependsOn testFrontend
     dependsOn prettierCheck
     dependsOn eslint
+}
+
+rootProject.updateVersion {
+    dependsOn updatePackageJsonVersion
 }
 
 publishing {
