--- a/settings.gradle
+++ b/settings.gradle
@@ -58,6 +58,7 @@ dependencyResolutionManagement {
             version("spotless", "6.8.0")
             version("spotless-changelog", "2.4.0")
             version("palantirformat", "2.25.0")
+            version("grgit", "5.0.0")
 
             library("spring-boot-autoconfigure", "org.springframework.boot", "spring-boot-autoconfigure").versionRef("spring-boot")
             library("spring-boot-test", "org.springframework.boot", "spring-boot-test").versionRef("spring-boot")
@@ -91,6 +92,7 @@ dependencyResolutionManagement {
             plugin("versions", "com.github.ben-manes.versions").versionRef("versions-plugin")
             plugin("spotless", "com.diffplug.spotless").versionRef("spotless")
             plugin("spotless-changelog", "com.diffplug.spotless-changelog").versionRef("spotless-changelog")
+            plugin("grgit", "org.ajoberstar.grgit").versionRef("grgit")
 
             bundle("spring-boot-starters", [
                 "spring-boot-starter-base",
