refine build workflows

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -1,4 +1,4 @@
-name: Build Release
+name: Release Build
 
 on:
   workflow_dispatch:
@@ -10,7 +10,7 @@ on:
         type: string
 
 jobs:
-  check:
+  buildRelease:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
