--- a/.github/workflows/build-snapshot.yml
+++ b/.github/workflows/build-snapshot.yml
@@ -1,11 +1,11 @@
-name: Build Snapshot
+name: Snapshot Build
 
 on:
   push:
     branches: [ "master" ]
 
 jobs:
-  check:
+  buildSnapshot:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
