--- a/.github/workflows/check-pull-request.yml
+++ b/.github/workflows/check-pull-request.yml
@@ -1,11 +1,11 @@
-name: Check Pull Request
+name: Pull Request Build
 
 on:
   pull_request:
     branches: [ "**" ]
 
 jobs:
-  check:
+  checkPullRequest:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
