try fixing snapshot build

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -24,4 +24,4 @@ jobs:
       - name: Invoke Gradle check
         uses: gradle/gradle-build-action@v2.3.0
         with:
-          arguments: clean doBuild -Prelease=true
+          arguments: "clean doBuild -Prelease=true"
