--- a/build.gradle
+++ b/build.gradle
@@ -205,7 +205,7 @@ build {
 }
 
 task doBuild {
-    def release = project.findProperty("release") as boolean
+    def release = project.findProperty("release")?.toBoolean()
     if (release) {
         dependsOn updateVersion, changelogBump, build, tagVersion
     } else {
