--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ wrapper {
 
 allprojects {
     group = "org.xylan.mailspy"
-    version = "0.0.0"
+    version = "0.1.0-SNAPSHOT"
 
     repositories {
         mavenCentral()
