--- a/mailspy-frontend/package.json
+++ b/mailspy-frontend/package.json
@@ -1,6 +1,6 @@
 {
     "name": "mailspy-frontend",
-    "version": "0.0.0",
+    "version": "0.1.0-SNAPSHOT",
     "description": "Frontend module for MailSpy",
     "main": "index.tsx",
     "scripts": {
