--- a/settings.gradle
+++ b/settings.gradle
@@ -59,6 +59,7 @@ dependencyResolutionManagement {
             version("spotless-changelog", "2.4.0")
             version("palantirformat", "2.25.0")
             version("grgit", "5.0.0")
+            version("lombokplugin", "5.0.0")
 
             library("spring-boot-autoconfigure", "org.springframework.boot", "spring-boot-autoconfigure").versionRef("spring-boot")
             library("spring-boot-test", "org.springframework.boot", "spring-boot-test").versionRef("spring-boot")
@@ -73,7 +74,6 @@ dependencyResolutionManagement {
             library("apache-commons-io", "commons-io", "commons-io").versionRef("commons-io")
             library("jakarta-servletapi", "jakarta.servlet", "jakarta.servlet-api").versionRef("jakarta-servletapi")
             library("jakarta-annotationsapi", "jakarta.annotation", "jakarta.annotation-api").versionRef("jakarta-annotationsapi")
-            library("lombok", "org.projectlombok", "lombok").versionRef("lombok")
             library("testng", "org.testng", "testng").versionRef("testng")
             library("mockito-core", "org.mockito", "mockito-core").versionRef("mockito")
             library("mockito-testng", "org.mockito", "mockito-testng").versionRef("mockito-testng")
@@ -93,6 +93,7 @@ dependencyResolutionManagement {
             plugin("spotless", "com.diffplug.spotless").versionRef("spotless")
             plugin("spotless-changelog", "com.diffplug.spotless-changelog").versionRef("spotless-changelog")
             plugin("grgit", "org.ajoberstar.grgit").versionRef("grgit")
+            plugin("lombok", "io.franzbecker.gradle-lombok").versionRef("lombokplugin")
 
             bundle("spring-boot-starters", [
                 "spring-boot-starter-base",
