--- a/mailspy-frontend/package.json
+++ b/mailspy-frontend/package.json
@@ -9,7 +9,7 @@
         "test": "craco test",
         "prettier-check": "prettier --check .",
         "prettier-apply": "prettier --write .",
-        "eslint": "eslint-output \"**/*.ts\" \"**/*.tsx\"",
+        "eslint": "eslint-output \"**/*.ts\" \"**/*.tsx\" --max-warnings 0",
         "versions-check": "npm-check-updates --target minor"
     },
     "author": "xylan.org",
@@ -17,23 +17,23 @@
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "1.2.36",
         "@fortawesome/free-solid-svg-icons": "5.15.4",
-        "@fortawesome/react-fontawesome": "0.1.18",
+        "@fortawesome/react-fontawesome": "0.2.0",
         "autobind-decorator": "2.4.0",
-        "bootstrap": "4.6.1",
+        "bootstrap": "4.6.2",
         "escape-html": "1.0.3",
         "file-saver": "2.0.5",
         "inversify": "5.1.1",
         "inversify-react": "0.4.3",
         "mailparser": "3.2.0",
-        "moment": "2.29.3",
+        "moment": "2.29.4",
         "raf": "3.4.1",
         "react": "17.0.2",
-        "react-bootstrap": "1.6.5",
+        "react-bootstrap": "1.6.6",
         "react-dom": "17.0.2",
         "reflect-metadata": "0.1.13"
     },
     "devDependencies": {
-        "@craco/craco": "6.4.3",
+        "@craco/craco": "6.4.5",
         "@sinonjs/fake-timers": "7.1.2",
         "@types/enzyme": "3.10.12",
         "@types/escape-html": "1.0.2",
@@ -41,8 +41,8 @@
         "@types/jest": "26.0.24",
         "@types/jest-when": "2.7.4",
         "@types/mailparser": "3.4.0",
-        "@types/node": "14.18.20",
-        "@types/react": "17.0.45",
+        "@types/node": "14.18.30",
+        "@types/react": "17.0.50",
         "@types/react-dom": "17.0.17",
         "@typescript-eslint/eslint-plugin": "4.33.0",
         "@typescript-eslint/parser": "4.33.0",
@@ -54,11 +54,11 @@
         "jest": "26.6.3",
         "jest-mock-extended": "1.0.18",
         "jest-when": "3.5.1",
-        "npm-check-updates": "13.1.1",
-        "prettier": "2.6.2",
+        "npm-check-updates": "13.1.5",
+        "prettier": "2.7.1",
         "react-scripts": "4.0.3",
         "ts-jest": "26.5.6",
-        "typescript": "4.7.3"
+        "typescript": "4.7.4"
     },
     "browserslist": [
         ">0.2%",
